<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackgroundColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backButtonClick"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/view_horizontal_margin"
        android:layout_marginLeft="10dp"
        android:src="@drawable/back_btn" />

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/view_horizontal_margin"
        android:layout_marginBottom="@dimen/view_horizontal_margin"
        android:orientation="horizontal">

        <CustomControl.AvenirNextCondensedBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_title"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <CustomControl.AvenirNextCondensedRegularTextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/user_type1_text"
            android:textColor="@color/textColor"
            android:textSize="30sp" />
    </LinearLayout>

    <CustomControl.AvenirNextCondensedRegularEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/titleLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/textColor" />

    <CustomControl.AvenirNextCondensedRegularEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:layout_below="@+id/emailEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/green_btn"
        android:gravity="start|center"
        android:paddingLeft="10dp"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <CustomControl.AvenirNextCondensedRegularTextView
        android:id="@+id/forgotLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/textColor"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <CustomControl.AvenirNextCondensedRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/no_account"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/facebookBtnLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/facebook_btn"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <CustomControl.AvenirNextCondensedRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/register_with_faecbook"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailBtnLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/register_btn"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <CustomControl.AvenirNextCondensedRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
