<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackgroundColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backButtonClick"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/back_btn" />

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CustomControl.AvenirNextCondensedBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresa"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <CustomControl.AvenirNextCondensedRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/otra_direccion"
            android:textColor="@color/textColor"
            android:textSize="25sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CustomControl.AvenirNextCondensedRegularEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/direccion"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/textColor" />

            <CustomControl.AvenirNextCondensedRegularEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/barrio"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/textColor" />

            <CustomControl.AvenirNextCondensedRegularEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_rounded_corner_light_grey"
                android:hint="@string/comentarios"
                android:gravity="top"
                android:padding="10dp"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/textColor" />


            <Button
                android:id="@+id/loginBtn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@id/scrollLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
