<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackgroundColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backButtonClick"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/view_horizontal_margin"
        android:layout_marginLeft="10dp"
        android:src="@drawable/back_btn" />

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backButtonClick"
        android:gravity="center"
        android:visibility="invisible"
        android:orientation="horizontal">

        <CustomControl.AvenirNextCondensedBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_screen_title"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <CustomControl.AvenirNextCondensedRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/register_screen_title1"
            android:textColor="@color/textColor"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CustomControl.AvenirNextCondensedRegularTextView
                android:id="@+id/termsLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/terms_conditons"
                android:gravity="center|start"
                android:textSize="@dimen/detail_text_size"
                android:inputType="textCapCharacters"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/textColor" />

            <CustomControl.AvenirNextCondensedRegularTextView
                android:id="@+id/piliticasLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/politicaText"
                android:gravity="start|center"
                android:textSize="@dimen/detail_text_size"
                android:inputType="textCapCharacters"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/textColor" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
